addTotalNumber
